<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Fragments.ComposeFragment">

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        tools:srcCompat="@tools:sample/avatars" />


    <EditText
        android:id="@+id/etCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCapture"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/captionHint"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etCaption"
        android:layout_centerHorizontal="true"
        android:text="@string/submitBtnText" />

    <Button
        android:id="@+id/btnCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivPostImage"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/submitCaptureText" />

</RelativeLayout>